# AndroidDvbDriver

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: app-release.apk  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/info/martinmarinov/dvbdriver/: AlertFragmentDialog.java  DataHandler.java  DeviceController.java  DvbFrontendActivity.java  ExceptionDialog.java  GplLicenseActivity.java  WelcomeActivity.java
app/src/main/res/layout/: activity_dvb_frontend.xml  activity_gpl_license.xml  activity_welcome.xml
app/src/main/res/values/: arrays.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-nb/: strings.xml
app/src/main/res/values-w820dp/: dimens.xml
drivers/: build.gradle
drivers/src/main/: AndroidManifest.xml
drivers/src/main/java/info/martinmarinov/drivers/: DeliverySystem.java  DeviceFilter.java  DvbCapabilities.java  DvbDemux.java  DvbDevice.java  (+2 more)
drivers/src/main/res/raw/: dvbusbaf903502fw  dvbusbit930301fw
drivers/src/main/res/values/: strings.xml
dvbservice/: build.gradle
dvbservice/src/main/: AndroidManifest.xml
dvbservice/src/main/res/layout/: progress.xml
dvbservice/src/main/res/values/: strings.xml  styles.xml
dvbservice/src/main/res/xml/: device_filter.xml
gradle/wrapper/: gradle-wrapper.properties
usbxfer/: CMakeLists.txt  build.gradle  proguard-rules.pro
usbxfer/src/main/: AndroidManifest.xml
usbxfer/src/main/cpp/: CMakeLists.txt  isorequest.c
usbxfer/src/main/jni/: isorequest.c  usbhispdbulk.c
usbxfer/src/main/res/values/: strings.xml
(+97 files in other folders)
